file(GLOB DOC_FILES
	${CMAKE_CURRENT_SOURCE_DIR}/*.gif
	${CMAKE_CURRENT_SOURCE_DIR}/*.png
	${CMAKE_CURRENT_SOURCE_DIR}/LICENCE.TXT
	${CMAKE_CURRENT_SOURCE_DIR}/LICENSE*.txt
	${CMAKE_CURRENT_SOURCE_DIR}/index.html
	${CMAKE_CURRENT_SOURCE_DIR}/turbovnc.css)

install(FILES ${DOC_FILES} DESTINATION ${CMAKE_INSTALL_DOCDIR})
